# data_quality

./: README.md  contrato.py  database.sqlite  pyproject.toml
